# smart-contracts

./: Readme.md
backend/: .env.example  .gitignore  Cargo.toml  README.md
backend/src/: main.rs
backend/src/routes/: etherscan.rs
backend/src/services/: etherscan_service.rs  mod.rs
frontend/: .env.example  README.md  index.html  package.json  pnpm-lock.yaml  tailwind.config.js
frontend/src/: App.tsx  index.css
frontend/src/api/: axiosInstance.ts  transactions.ts
frontend/src/components/: EthereumWeb3App.tsx  WalletInfo.tsx
frontend/src/hooks/: useWallet.ts
smart-contract/: .env.example  README.md  hardhat.config.ts  package.json  pnpm-lock.yaml
smart-contract/contracts/: Token.sol  TokenERC20.sol
smart-contract/scripts/: deploy-erc20.ts  deploy.ts  mint-erc20.ts
smart-contract/test/: Token.ts  TokenERC20.ts
