[package]
name = "backend"
version = "0.1.0"
edition = "2024"

[dependencies]
rocket = "0.5.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.12", features = ["json"] }
dotenv = "0.15.0"
governor = "0.6"
once_cell = "1.19"
redis = { version = "0.24", features = ["tokio-comp"] }
rocket_cors = "0.6"